--- a/app/src/main/res/layout/activity_music_player.xml
+++ b/app/src/main/res/layout/activity_music_player.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MusicPlayer"
+    android:id="@+id/cl_main"
     android:background="@drawable/bg1">
 
     <TextView
@@ -64,7 +65,7 @@
         android:id="@+id/btn_zt"
         app:layout_constraintBottom_toBottomOf="parent"
         android:textSize="20dp"
-        android:text="@string/bf"/>
+        android:text="@string/zt"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
